--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
 
       <div class="right-bg-container">
         <div>
-          <img class="bg-picture" src="/thumbnails/https___res.cloudinary.com_talentql-inc_image_upload_v1703728439_student-portal_academic_zzg4hi.png">
+          <img class="bg-picture" src="thumbnails/https___res.cloudinary.com_talentql-inc_image_upload_v1703728439_student-portal_academic_zzg4hi.png">
         </div>
         <div>
 
@@ -24,16 +24,16 @@
           </div>
           <div class="image-main-container">
             <diV class="image-container">
-              <img  class="images" src="/thumbnails/dark-blue-tweetlogo.png">
+              <img  class="images" src="thumbnails/dark-blue-tweetlogo.png">
             </diV>
             <diV class="image-container">
-              <img class="images" src="/thumbnails/blue-instagRAM.png">
+              <img class="images" src="thumbnails/blue-instagRAM.png">
             </diV>
             <diV class="image-container">
-              <img class="images" src="/thumbnails/facebook-logo.png">
+              <img class="images" src="thumbnails/facebook-logo.png">
             </diV>
             <div class="image-container">
-              <img class="images" src="/thumbnails/linkdin-blue-logo.png">
+              <img class="images" src="thumbnails/linkdin-blue-logo.png">
             </div>
           </div>
           <div class="telephone">
