--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </p>
   </section>
   <div class="container">
-    <img class="IDcard" src="/thumbnails/altschool-ID.jpeg">
+    <img class="IDcard" src="thumbnails/altschool-ID.jpeg">
         <h1>Welcome viewers</h1>
     <p>
       <h3 id="section1">
