--- a/index.html
+++ b/index.html
@@ -7,39 +7,69 @@
   <title>Assignment one</title>
 </head>
 <body >
-  <h1>Welcome viewers</h1>
-  <section  class="main-section">
-    <p> 
-      <a href="form.html">SIGNUP/FORM</a></p>
-    <p>
-    <p>
-      <a href="#section1">
-        INTRODUCTION
+
+  <div style="background-color:skyblue;">
+  
+    <diV>
+      <a href="form.html">Form</a>
+    </diV>
+    <diV>
+      <a href="table.html">
+        Table
       </a>
-    </p>
-      <a href="#section2">
-        EARLY LIFE
+    </diV>
+    <diV>
+      <a href="gallery.html">
+        gallery
       </a>
-    </p>
-    <p>
-      <a href="#section3">
-        ASPIRATION
-      </a>
-    </p>
-    <p>
-      <a href="#section4">
-        WHY ALTSCHOOL
-      </a>
-    </p>
-    <p>
-      <a href="#section5">
-        VISION
-      </a>
-    </p>
-  </section>
-  <div class="container">
-    <img class="IDcard" src="thumbnails/altschool-ID.jpeg">
-        <h1>Welcome viewers</h1>
+  
+    </diV>
+
+    <diV class="button-cover">
+      <a href="index.html">Home</a>
+    </diV>
+
+  </diV>
+
+  <h1>Welcome to my blog</h1>
+
+  <div class="section-container" >
+
+    <section  class="m-section">
+      <div>
+        <a href="#section1">
+          INTRODUCTION
+        </a>
+      </div>
+      <diV>
+        <a href="#section2">
+          EARLY LIFE
+        </a>
+      </diV>
+      <diV>
+        <a href="#section3">
+          ASPIRATION
+        </a>
+      </diV>
+      <diV>
+        <a href="#section4">
+          WHY ALTSCHOOL
+        </a>
+      </diV>
+      <div>
+        <a href="#section5">
+          VISION
+        </a>
+      </div>
+    </section>
+  </div>
+
+  <div class="blog-container">
+
+    <div class="idcard-container">
+      <img class="IDcard" src="thumbnails/altschool-ID.jpeg">
+    </div>
+
     <p>
       <h3 id="section1">
         Aspiring Cloud Engineer at AltSchool Africa
